# huffman-coding

./: .gitignore  README.md  array.c  array.h  binary.c  binary.h  char_array.c  char_array.h  config.h  decode.c  encode.c  meson.build  node.c  node.h  node_array.c  node_array.h  node_breadcrumb_array.c  node_breadcrumb_array.h  node_queue.c  node_queue.h  utilities.c  utilities.h
