project('huffman_encoding', 'c', version : '0.1', default_options : ['c_std=c99', 'default_library=static'])

sources = [
        'encode.c',
        'binary.c',
        'char_array.c',
        'node.c',
        'node_array.c',
        'node_queue.c',
        'utilities.c',
]

executable('huffman_encode', sources)